--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -2,9 +2,19 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 >
 <h:head/>
 <h:body>
-    <h2>Hello World!</h2>
+    <h2>My board game list:</h2>
+    <ol>
+        <ui:repeat value="#{boardGames.allEntities}" var="boardGame">
+            <li>#{boardGame.name}</li>
+        </ui:repeat>
+    </ol>
+    <h:form>
+        <h:inputText value="#{boardGames.boardGameToCreate.name}" required="true" />
+        <h:commandButton value="Add new entity" action="#{boardGames.createEntity}" />
+    </h:form>
 </h:body>
 </html>
